Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
6.5, 6.6
-
None
-
-
7ad75617e (dev), dc55e7cdd (6.6), 454698057 (6.5)
-
2023wk32FOQtforAndroid
Description
When camera is changed from rear to front list of supported flash modes are not cleared. Can be reproduced on declarative-camera example
Attachments
For Gerrit Dashboard: QTBUG-115843 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
494970,3 | Android: Clear supported flash modes on FFmpeg-backend | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
496032,2 | Android: Clear supported flash modes on FFmpeg-backend | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
496033,2 | Android: Clear supported flash modes on FFmpeg-backend | 6.5 | qt/qtmultimedia | Status: MERGED | +2 | 0 |