Android: Clear supported flash modes on FFmpeg-backend

When updating Camera Characteristics, we should first clear current list
of supported flash modes.

Fixes: QTBUG-115843
Change-Id: I25adbd82612100080e189e93097f0132496cddb0
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 7ad75617eab2e3e6b6a2b4143ea15cdba9035bc9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>